# epl-bets

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PLAN.md  README.md  codecov.yml  conftest.py  docker-compose.yml  entrypoint.sh  fly.toml  pyproject.toml  release.sh
.claude/: plan.md
.claude/plans/: bot-interactions-and-homers.md
.github/workflows/: ci.yml  fly-deploy.yml
activity/: admin.py  apps.py  consumers.py  forms.py  models.py  routing.py  tasks.py  urls.py  views.py
activity/migrations/: 0001_initial.py
activity/tests/: test_consumers.py  test_context_processors.py  test_forms.py  test_models.py  test_routing.py  test_services.py  test_tasks.py  test_views.py
betting/: admin.py  badges.py  balance.py  context_processors.py  forms.py  models.py  odds_engine.py  services.py  stats.py  tasks.py  urls.py  views.py
betting/migrations/: 0001_initial.py  0002_bankruptcy_and_bailout.py  0003_add_parlay_models.py  0004_add_user_stats.py  0005_add_badge_models.py  0006_alter_badge_icon.py  0007_balancetransaction.py  0008_backfill_signup_transactions.py  0009_reconstruct_balance_history.py
betting/tests/: factories.py  test_backfill_stats.py  test_badges.py  test_balance.py  test_context_processors.py  test_forms.py  test_leaderboard_services.py  test_models.py  (+10 more)
board/: admin.py  context.py  forms.py  models.py  tasks.py  urls.py  views.py
bots/: admin.py  comment_service.py  models.py  personas.py  registry.py  services.py  strategies.py  tasks.py
challenges/: admin.py  challenge_definitions.py  engine.py  models.py  tasks.py  views.py
config/: api_urls.py  asgi.py  settings.py  urls.py
discussions/: admin.py  models.py  urls.py  views.py
docs/: 0000-PLAN.md  0001-PHASE_1.md  0002-PHASE_2.md  0003-PHASE_3.md  0004-PHASE_4.md  0005-PHASE_5.md  0006-PHASE_6.md  0007-PHASE_7.md  0008-PHASE_8.md  0009-PHASE_9.md  0010-PHASE_10.md  0011-PHASE_11.md  0012-PHASE_12.md  0013-PHASE_13.md  0014-PHASE_14.md  0015-PARLAY_SYSTEM.md  0016-LEADERBOARDS.md  0017-STREAKS_AND_BADGES.md  0018-CHALLENGES.md  0019-PARLAY_OF_THE_WEEK.md  0020-MATCH_HYPE_CARDS.md  0021-LIVE_MATCH_PULSE.md  0022-LOYALTY_BONUSES.md  0023-MATCH_STATUS_CARDS.md  0024-CURRENCY_SETTINGS.md  0025-BOT_MEMBERS.md  0026-HOMER_BOT.md  0027-MATCH_DISCUSSION_THREADS.md  0028-MATCH_DETAIL_REDESIGN.md  0029-REMOVE_UNDER_THE_HOOD.md  0030-BOT_INTERACTIONS.md  0031-BOT_BET_AWARE_COMMENTS.md  0032-MESSAGE_BOARD.md  0033-BOARD-CHALLENGES-TEST-COVERAGE.md  0034-BOT_PROFILE_ADMIN.md  0035-MATCH_NOTES.md  0036-ODDS_OVERHAUL.md  LAUNCH-PLAN.md  NBA-BETS-PLAN.md  NEXT-FEATURES.md  (+1 more)
flags/: admin.py  apps.py  helpers.py  models.py
matches/: admin.py  consumers.py  models.py  routing.py  services.py  tasks.py  urls.py  views.py
rewards/: admin.py  apps.py  consumers.py  context_processors.py  models.py  signals.py  urls.py  views.py
users/: admin.py  avatars.py  forms.py  models.py  serializers.py  urls.py  views.py
website/: admin.py  context_processors.py  forms.py  middleware.py  models.py  transparency.py  urls.py  views.py
(+176 files in other folders)
