[tool.poetry]
name = "calvert-labs"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
djangorestframework = "^3.15"
djangorestframework-simplejwt = "^5.3"
django-cors-headers = "^4.4"
django-environ = "^0.11"
psycopg2-binary = "^2.9"
gunicorn = "^23.0"
channels = {version = "^4.0", extras = ["daphne"]}
channels-redis = "^4.2"
celery = {version = "^5.4", extras = ["redis"]}
django-celery-beat = "^2.7"
redis = "^5.0"
httpx = "^0.28"
django-htmx = "^1.21"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11"
django-debug-toolbar = "^5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
