[tool.poetry]
name = "calvert-labs"
version = "0.1.0"
description = ""
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1"
djangorestframework = "^3.15"
djangorestframework-simplejwt = "^5.3"
django-cors-headers = "^4.4"
django-environ = "^0.11"
psycopg2-binary = "^2.9"
gunicorn = "^23.0"
whitenoise = "^6.9"
channels = {version = "^4.0", extras = ["daphne"]}
channels-redis = "^4.2"
celery = {version = "^5.4", extras = ["redis"]}
django-celery-beat = "^2.7"
redis = "^5.0"
httpx = "^0.28"
django-htmx = "^1.21"
anthropic = "^0.52"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11"
django-debug-toolbar = "^5.0"
pytest = "^8.3"
pytest-django = "^4.11"
pytest-cov = "^6.0"
pytest-xdist = "^3.6"
factory-boy = "^3.3"
respx = "^0.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
extend-exclude = ["*/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--strict-markers --strict-config"
testpaths = ["activity", "core", "users", "matches", "betting", "rewards", "website", "bots", "discussions", "flags", "board"]

[tool.coverage.run]
source = ["activity", "core", "users", "matches", "betting", "rewards", "website", "bots", "discussions", "flags", "board"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/admin.py",
]

[tool.coverage.report]
fail_under = 96
show_missing = true
skip_covered = true
